--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<opencv.version>3.2.0-1.3</opencv.version>
 	</properties>
 
 	<dependencies>
@@ -45,20 +46,41 @@
 		<dependency>
 			<groupId>org.bytedeco</groupId>
 			<artifactId>javacpp</artifactId>
-			<version>0.9</version>		
+			<version>1.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.bytedeco.javacpp-presets</groupId>
 			<artifactId>opencv</artifactId>
-			<version>2.4.9-0.9</version>
+			<version>${opencv.version}</version>
 		</dependency>
-		
-<!-- 		<dependency>
+		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>opencv</artifactId>
+			<version>${opencv.version}</version>
+			<classifier>windows-x86_64</classifier>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>opencv</artifactId>
+			<version>${opencv.version}</version>
+			<classifier>linux-x86_64</classifier>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>opencv</artifactId>
+			<version>${opencv.version}</version>
+			<classifier>macosx-x86_64</classifier>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.bytedeco</groupId>
 			<artifactId>javacv</artifactId>
-			<version>0.9</version>
-		</dependency>	 -->	
+			<version>1.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -87,8 +109,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
